fix text sizing issues on mobile

--- a/app/scss/components/_hero.scss
+++ b/app/scss/components/_hero.scss
@@ -30,6 +30,10 @@
 		overflow-wrap: break-word;
 		transition: text-shadow 0.5s;
 		text-shadow: 0 0 0 transparent;
+
+		@include u.breakpoint-down(small) {
+			max-width: 20ch;
+		}
 	}
 
 	&__title {
