--- a/app/scss/components/_projects-preview.scss
+++ b/app/scss/components/_projects-preview.scss
@@ -36,6 +36,7 @@
 		font-size: clamp(4rem, 3.6rem + 2vw, 6rem);
 
 		@include u.breakpoint-down(small) {
+			font-size: 2rem;
 			text-align: center;
 		}
 	}
